forth/test/fail/test_const_fold_redundant_shift.af
use' ../../lang.af
fun: test_const_fold_redundant_shift { val -- out } val 0 .lsl end
